--- a/index.html
+++ b/index.html
@@ -1,24 +1,31 @@
 <!DOCTYPE html>
 <html>
-  <body>
-    <title> Tavia Rose Practice</title>
-  </body>
+<!---@supports (-webkit-text-stroke: 1px black) --->
+<head>
+<style>
+body {
+  background-image: url("https://img.freepik.com/free-vector/abstract-colorful-flow-shapes-background_23-2148258092.jpg?size=626&ext=jpg");
+  background-repeat: xy;
+  background-position: center;
+  background-attachment: fixed;
+  
+}
+h1{ color: hotpink;
+    font-size: 75px;
+    border-style: dotted;
+    border-width: 2px 10px 4px 20px;
+    border-color: white;
+}
+p { color: dodgerblue;
+font-size: 80px;
+-webkit-text-stroke: 3px black;
+}
+</style>
+</head>
+<body>
 
+<h1>Hello World!</h1>
+<p>This text wasn't easy to read on this background but, it is now :).</p>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+</body>
 </html>
