--- a/index.html
+++ b/index.html
@@ -10,15 +10,24 @@ body {
   background-attachment: fixed;
   
 }
+div {
+  width: 300px;
+  border: solid 15px #3FE0CF;
+  padding: 50px;
+  margin: 20px;
+  
+}
 h1{ color: hotpink;
     font-size: 75px;
     border-style: dotted;
     border-width: 2px 10px 4px 20px;
     border-color: white;
+    margin: 20px;
 }
 p { color: dodgerblue;
 font-size: 80px;
 -webkit-text-stroke: 3px black;
+background-color: yellow;
 }
 </style>
 </head>
@@ -26,6 +35,6 @@ font-size: 80px;
 
 <h1>Hello World!</h1>
 <p>This text wasn't easy to read on this background but, it is now :).</p>
-
+<div> I'm going to mess around with some div elements here </div>
 </body>
 </html>
